my-apps/development/mailpit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
  namespace: mailpit
  labels:
    app.kubernetes.io/name: mailpit
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mailpit
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailpit
      annotations:
        instrumentation.opentelemetry.io/inject-go: "opentelemetry/default"
    spec:
      containers:
        - name: mailpit
          image: ghcr.io/axllent/mailpit:latest@sha256:56341a70f45e512ee835c1f2e19e2fe42716fba03d8a0be72e1705ee21539fd4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8025
            - name: smtp
              containerPort: 1025
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
